fix: solve ChatRoom LazyInitializationException problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/easy_chat
 spring.datasource.username=postgres
 spring.datasource.password=admin
+#spring.jpa.show-sql=true
