--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/easy_chat
 spring.datasource.username=postgres
 spring.datasource.password=admin
 #spring.jpa.show-sql=true
+socket.server.port=8085
+socket-server.host=192.168.1.4
